# quintra

./: .gitignore  .gitmodules  .mcp.json  CLAUDE.md  Makefile  README.md  claude-conversation-1-1-26.md.txt  claude-conversatoion-2026-01-01.txt  mgba-qt.sh  output.json  output.txt  pyproject.toml  verify_boot_report.json
content/: README.md
docs/: 2026-07-21-whole-game-audit.md  ADVANCED_COLORIZATION_APPROACHES.md  CGB_COLORIZATION_FINDINGS.md  COLOR_NAMES.md  ENTITY_DATA_STRUCTURE.md  FINDINGS_2026_06_07_gdma_is_dead_code.md  FINDINGS_2026_06_08_position_sweep.md  FINDINGS_2026_06_08_sweep_table_disagreement.md  FINDINGS_2026_06_13_dungeon_flicker_and_riff.md  GBC_NATIVE_APPROACH.md  HANDOFF_2026_06_01.md  HANDOFF_2026_06_08_arena_colorization.md  HANDOFF_2026_06_08_position_sweep_DONE.md  INDEX.md  PLAN_2026_06_07_arena_position_gdma.md  QT_WINDOW_POSITIONING.md  RELIABLE_APPROACH.md  REVIEW_2026_06_07_arena_gdma_plan.md  SCALABLE_PALETTE_APPROACH.md  SESSION_SUMMARY_2025-12-27.md  VBLANK_HOOK_LIMITATIONS.md  bank_switched_call_pattern.md  bg_tile_architecture.md  boss_arena_routines.md  boss_teleport_breakthrough.md  d880_state_machine.md  dx_teleport_browser_integration_findings.md  game_state_machine.md  gameplay_state_via_ffc1.md  hram_allocation_map.md  inline_hook_analysis_v300.md  inline_tile_attr_copy.md  interrupt_architecture.md  live_palette_editor.md  main_loop_and_entry.md  (+23 more)
rl/: .gitignore  README.md  RESULTS.md  SESSION_SUMMARY_2026-05-06.md  SHALAMAR_FINDINGS.md  analyze_visited_rooms.py  bc_combined_kill.py  bc_kill_oversample.py  bc_kill_oversampled_history.json  capture_all_arenas.py  capture_arenas_direct.py  capture_arenas_full_init.py  capture_ffba2.py  capture_remaining_arenas.py  debug_hang.py  debug_hang10.py  debug_hang11.py  debug_hang2.py  debug_hang3.py  debug_hang4.py  debug_hang5.py  debug_hang6.py  debug_hang7.py  debug_hang8.py  debug_hang9.py  debug_hang_minimal.py  debug_no_update.py  debug_train_step.py  diag_demo_states.py  diag_natural_episode.py  diagnose_cheat.py  diagnose_ffbf.py  diagnose_kill.py  diagnose_states.py  disasm_event_dispatch.py  eval_ensemble.py  eval_generic.py  eval_kill_oversampled.py  eval_policy.sh  eval_temperature.py  (+77 more)
rl/penta_rl/: __init__.py  bc_data.py  bc_eval.py  bc_train.py  coach.py  curriculum.py  dagger.py  env.py  env_worker.py  eval.py  godmode_env.py  play.py  ppo.py  replay_enrich.py  reward.py  savestate.py  smoke.py  state.py  train.py  train_bc_ppo.py  train_combat.py  train_curriculum.py  train_simple.py  train_vec.py  vec_env.py
rl/saves/user_demo/: MANIFEST.md  batch_convert.sh  dump_state_to_bin.lua  inject_to_pyboy.py  test_injected_state.py
rl/saves/user_demo/converted/: 191148_user_demo_ss1.state  191247_orb_item.state  191434_post_teleporter.state  191514_dragon_form.state  192015_at_dragon_item.state  192315_rock_item.state  194014_PRE_secret_trigger.state  194339_SHMUP_miniboss.state  194849_SHMUP_mb2_post_heal.state  195029_SHMUP_post_hoard.state  195542_SHALAMAR_DEAD.state  CHECKPOINT_200320.state
tools/: Cargo.toml
tools/crates/quintra-assets/: Cargo.toml
tools/crates/quintra-assets/src/: bosses.rs  gbc.rs  grids.rs  main.rs
tools/crates/quintra-codegen/: Cargo.toml
tools/crates/quintra-codegen/src/: content.rs  emit.rs  main.rs
tools/crates/quintra-content/: Cargo.toml
tools/crates/quintra-content/src/: biome.rs  class.rs  effects.rs  enemy.rs  item.rs  lib.rs  refs.rs  registry.rs  room.rs  stage.rs  stats.rs  zelda_overworld.rs
tools/crates/quintra-mgba/: Cargo.toml
tools/crates/quintra-mgba/src/: main.rs
tools/crates/quintra-procgen/: Cargo.toml
tools/crates/quintra-procgen/src/: lib.rs  rng.rs  room.rs
(+1184 files in other folders)
