[workspace]
resolver = "2"
members = [
    "crates/quintra-content",
    "crates/quintra-codegen",
    "crates/quintra-assets",
    "crates/quintra-procgen",
    "crates/quintra-mgba",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://github.com/struktured/penta-dragon-remake"

[workspace.dependencies]
quintra-content = { path = "crates/quintra-content" }
quintra-codegen = { path = "crates/quintra-codegen" }
quintra-procgen = { path = "crates/quintra-procgen" }

# Common 3rd-party
anyhow      = "1"
thiserror   = "1"
clap        = { version = "4", features = ["derive"] }
serde       = { version = "1", features = ["derive"] }
ron         = "0.8"
image       = { version = "0.25", default-features = false, features = ["png"] }

[profile.release]
opt-level = 3
lto       = "thin"
