[package]
name        = "quintra-assets"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true
license.workspace     = true
description = "PNG → GBC tile data + palette quantize + music convert"

[[bin]]
name = "quintra-assets"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap   = { workspace = true }
image  = { workspace = true }
