[package]
name        = "quintra-mgba"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true
license.workspace     = true
description = "mGBA debug bridge — runtime introspection during dev"

[[bin]]
name = "quintra-mgba"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap   = { workspace = true }
