[package]
name        = "quintra-mgba"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true
license.workspace     = true
description = "Typed reports for Quintra's controller-only mGBA instrumentation"

[[bin]]
name = "quintra-mgba"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap   = { workspace = true }
